# virgil

./: CMakeLists.txt  brain.v  data  gendata.cpp  testdata.v  virgil.kdevelop  virgil.kdevses  virgil.pro
main/: GLvlMasterView.ui  GLvlPlaneView.ui  GLvlView.ui  GlvlView.ui  PlaneView.ui  bild.cpp  bild.h  bild_odin.cpp  bild_odin.h  config.ui  glvlcutplane.cpp  glvlcutplane.h  glvlmasterview.cpp  glvlmasterview.h  glvlminima.cpp  glvlminima.h  glvlminima3d.cpp  glvlminima3d.h  glvlminimatex.cpp  glvlminimatex.h  glvlmultiviewmanager.cpp  glvlmultiviewmanager.h  glvlpin.cpp  glvlpin.h  glvlpinsdlg.cpp  glvlpinsdlg.h  glvlplanecam.cpp  glvlplanecam.h  glvlplanecursor.cpp  glvlplanecursor.h  glvlplaneview.cpp  glvlplaneview.h  glvlposlistener.cpp  glvlposlistener.h  glvlrule.cpp  glvlrule.h  glvlsegment.cpp  glvlsegment.h  glvlsegmentdialog.cpp  glvlsegmentdialog.h  (+19 more)
wshed/: vincent_bild.h  vincent_punkt.h  vincent_transform.cpp  vincent_transform.h  wshed.pro
